[package]
name = "labnotes"
version = "0.0.3"
authors = ["Finn Stokes <finn.stokes@gmail.com>"]
edition = "2021"
description = "Serve a directory of markdown files as a simple website. Designed for maintaining academic notes."
default-run = "labnotes"

[dependencies]
katex = "0.4"
pulldown-cmark = "0.9"
rocket = "0.4"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
maud = { version = "0.23", features = ["rocket"] }
ammonia = "3.2"
regex = "1.5"
smallvec = "1.6"
