[package]
name = "labnotes"
version = "0.1.0"
authors = ["Finn Stokes <finn.stokes@gmail.com>"]
edition = "2021"
description = "Serve a directory of markdown files as a simple website. Designed for maintaining academic notes."
default-run = "labnotes"

[dependencies]
katex = "0.4"
pulldown-cmark = "0.11"
rocket = "0.5"
clap = { version = "4.5", features = [ "derive" ] }
maud = { version = "0.26", features = ["rocket"] }
ammonia = "4.0"
regex = "1.10"
smallvec = "1.13"
pulldown-cmark-escape = "0.11.0"
